Fixed jumping form input fields

--- a/client/design/sass/modules/_modals.scss
+++ b/client/design/sass/modules/_modals.scss
@@ -146,6 +146,7 @@ div.modalBackground{
 	textarea{
 		box-sizing: border-box;
 		border: none;
+		border-bottom: 0.2em solid $lightBackgroundGray;
 
 		border-radius: 0.3em;
 
